# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
images/10/: timing.txt
images/100/: timing.txt
images/1000/: timing.txt
images/adaptive_100/: timing.txt
images/adaptive_1000/: timing.txt
images/adaptive_10000/: timing.txt
scripts/: make_10.sh  make_100.sh  make_1000.sh  make_adaptive_100.sh  make_adaptive_1000.sh  make_adaptive_10000.sh  make_adaptive_10000_01.sh  make_scenes.sh
src/: aabb.h  aspect.h  bvh.h  camera.h  cli.h  colour.h  concepts.h  constant_medium.h  hittable.h  hittable_list.h  image.h  interval.h  main.cpp  material.h  movement.h  output.h  perlin.h  pixel_renderer.h  pixel_sampler.h  progress.h  quad.h  random.h  ray.h  raytracing.h  renderer.h  rtw_stb_image.h  sampler.h  sampler_types.h  scene.h  shape.h  sphere.h  texture.h  vec3.h  world.h
